--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">FloatProject</string>
-    <string name="plugin_title">插 件 功 能</string>
+    <string name="plugin_title">其它好玩的游戏</string>
     <string name="plugin_chat_set">设置喊话内容</string>
     <string name="plugin_chat_save">保 存</string>
     <string name="plugin_chat_clear">清 空</string>
